webapl-04-springboot/k8s-istio/base/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-java-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-java-vs
spec:
  hosts:
  - "*"
  gateways:
  - web-java-gw
  http:
  - match:
    - uri:
        exact: /greeting
    route:
    - destination:
        host: web-java
        port:
          number: 8080
